Исправил найденные проблемы

--- a/src/sass/_footer.sass
+++ b/src/sass/_footer.sass
@@ -11,8 +11,7 @@
         align-items: center
     &-info
         // margin-top: 20px
-        display: flex
-        flex-direction: column
+        @include flex-rules($direction: column)
         #text
             text-transform: uppercase
             color: #5A1404
@@ -28,9 +27,7 @@
             @media (max-width: 800px)
                 font-size: 25px
     &-links
-        display: flex
-        flex-direction: row
-        justify-content: space-around
+        @include flex-rules($justify: space-around )
         color: #5A1404
         font-size: 16px
         font-weight: 500
@@ -46,8 +43,7 @@
             @media (min-width: 1000px)
                 margin: 0px 30px
     &-share
-        display: flex
-        flex-direction: column
+        @include flex-rules($direction: column)
         flex-wrap: wrap
         @media (max-width: 450px)
             text-align: center
@@ -63,7 +59,7 @@
             img
                 @include transition(all, 0.1s, eaase)
             img:hover
-                transform: scale(1.2)
+                @include transform(scale(1.2))
 
 .company
     font-size: 12px
