--- a/src/sass/_slider.sass
+++ b/src/sass/_slider.sass
@@ -8,6 +8,8 @@
         font-size: 36px
         color: #5A1404
         text-align: center
+        @media(max-width: 450px)
+            font-size: 30px
 
 .item
     color: #5A1404
