--- a/src/sass/_rules.sass
+++ b/src/sass/_rules.sass
@@ -1,6 +1,6 @@
 .presents
     padding-top: 80px
-    background: linear-gradient(0deg, #ffcf00, #ecb200)
+    background: linear-gradient(0deg, #ffcf00, $backcolor2)
     h1
         text-transform: uppercase
         text-align: center
@@ -9,12 +9,12 @@
         font-size: 60px
         color: red
         text-shadow: -2px 4px 0px rgba(255, 255, 255, 1)
+        @media(max-width: 450px)
+            font-size: 40px
 
 .rule
     margin: 65px 0px
-    display: flex
-    justify-content: center
-    align-items: stretch
+    @include flex-rules($justify: center, $align: stretch)
     flex-wrap: wrap
     @media(max-width: 800px)
         flex-direction: column
@@ -23,14 +23,12 @@
 
     &-item
         max-width: 200px
-        display: flex
-        flex-direction: column
-
+        @include flex-rules($direction: column, $justify: center, $align: center)
         text-align: center
         font-size: 20px
         color: #5b1a0d
         &-text
-            align-items: center
+            @include flex-rules($direction: column, $justify: center, $align: center)
             height: 100%
 
     &-item img
@@ -40,5 +38,5 @@
         align-self: flex-end
         margin: 30px
         @media(max-width: 800px)
-            transform: rotate(90deg)
+            @include transform(rotate(90deg))
             align-self: center
